Add neural nets to teach skull to dodge bears on its own, has some problems with edges

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>    
+<html>
     <head>
         <meta charset="utf-8"/>
         <title> Fuzzy Bear </title>
@@ -11,15 +11,17 @@
             }
         </style>
         <script type="text/javascript" src="phaser-arcade-physics.min.js"> </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/synaptic/1.0.8/synaptic.js"></script>
+        <script type="text/javascript" src="js/skull.js"> </script>
         <script type="text/javascript" src="js/boot.js"> </script>
         <script type="text/javascript" src="js/load.js"> </script>
         <script type="text/javascript" src="js/menu.js"> </script>
         <script type="text/javascript" src="js/play.js"> </script>
         <script type="text/javascript" src="js/game.js"> </script>
     </head>
-    
+
     <body>
         <div id="gameDiv"> </div>
     </body>
-    
+
 </html>
